--- a/src/components/AddTask/addTask.module.css
+++ b/src/components/AddTask/addTask.module.css
@@ -1,3 +1,10 @@
-.addTask {
+.todoForm {
   /* Sample */
+  width: 350px;
+  margin: auto;
+  text-align: center;
+  padding: 5px;
+  display: flex;
+  justify-content: space-between;
+
 }
